Changes with Apache 1.3.20

  *) Correct a vulnerability in the Win32 and OS2 ports, by which a 
     client submitting a carefully constructed URI could cause a GP
     (segment) fault in the child process, which would have to be
     cleared by the operator to resume operation.  This vulnerability
     introduced no identified means to comprimize the server's data.
     Reported by Auriemma Luigi <kaino3@genie.it>.
     [William Rowe, Brian Harvard]

  *) Resolve the Win32 SSI exec cmd bug, where cmd was not executed
     appropriately against the shell.  [William Rowe]

  *) Added NOESCAPE (NS) flag to RewriteRule and enabled use of
     '\' to allow escaping of special characters.  Previously
     there was no way to embed either '$' or '%' in the output
     of a RewriteRule; now 'foo\$1' will result in a literal
     'foo$1' appearing in the result rather than 'foo\<value of $1>'.
     Note that [NS] disables *all* normal URI escaping, so incautious
     use can give unexpected results.  [Ken Coar]

  *) Add support for Win32 apxs.  Note that cygwin builders must use a
     cygwin perl to avoid the MSWin32 handling.  [William Rowe]

  *) Changed the initial screen handling for NetWare so that the -s 
     parameter will properly destroy the Apache console screen and switch 
     to the system console screen.  Also removed the call to clrscr() for 
     NetWare so that any warning messages produced during startup are visible.
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Integrate support for the Cygwin 1.x platform (a POSIX emulation layer
     for Win32 systems, see http://www.cygwin.com)
     [Stipe Tolj <tolj@wapme-systems.de>]

  *) Changes to 'ab': fixed int overruns, added statistics, output in
     csv/gnuplot format, rudimentary SSL support and various other tweaks
     to make results more true to what is measured. The upshot of this it
     turns out that 'ab' has often underreported the true performance of