@@ -1,5 +1,8 @@
 Changes with Apache 1.3.20
 
+  *) Autodetect if platforms have isnan() and/or isinf() for use in
+     ap_snprintf.c. [Jim Jagielski]
+
   *) Correct a vulnerability in the Win32 and OS2 ports, by which a 
      client submitting a carefully constructed URI could cause a GP
      (segment) fault in the child process, which would have to be
